--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- MainActivity -->
     <string name="app_name">My App Portfolio</string>
     <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
     <string name="popular_movies">POPULAR MOVIES</string>
@@ -7,4 +8,7 @@
     <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
     <string name="build_it_bigger">BUILD IT BIGGER</string>
     <string name="stock_hawk">STOCK HAWK</string>
+    <!-- PopularMoviesActivity -->
+    <string name="title_activity_settings">Settings</string>
+
 </resources>
