--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,18 @@
     <!-- MainActivity -->
     <string name="app_name">My App Portfolio</string>
     <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
-    <string name="popular_movies">POPULAR MOVIES</string>
+    <string name="popular_movies">POP MOVIES</string>
     <string name="capstone">CAPSTONE</string>
     <string name="go_ubiquitous">GO UBIQUITOUS</string>
     <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
     <string name="build_it_bigger">BUILD IT BIGGER</string>
     <string name="stock_hawk">STOCK HAWK</string>
+    <string name="movie_detail">MovieDetail</string>
     <!-- PopularMoviesActivity -->
     <string name="title_activity_settings">Settings</string>
+    <string name="mark_as">MARK AS</string>
+    <string name="favorite">FAVORITE</string>
+    <string name="popularity">Popularity</string>
+    <string name="average">Average</string>
 
 </resources>
