1.加入高评分电影 2.使用黄油刀 3.在预览界面使用tools：text代替android：text 4.实现异步查询数据库代替在主线程查询。 5.对隐式intent判断，以免startActivity崩溃

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
     <string name="btn6_toast">This button will launch my capstone app!</string>
     <string name="collection">Collection</string>
     <string name="movie_collection">MovieCollection</string>
+    <string name="review">REVIEW</string>
+    <string name="author">author: </string>
+    <string name="content">content: </string>
+    <string name="trailer">TRAILER</string>
 
     <!-- SyncAdapter related -->
     <string name="sync_account_type">project00.cqing.com</string>
